--- a/templates/base.html
+++ b/templates/base.html
@@ -2,64 +2,195 @@
 {% load i18n %}
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <meta name="description" content="FineChop - Asian-style restaurant/takeaway service in Dublin City">
-    <meta name="keywords"
-        content="Asian-style, food, order, menu, reservations, reserve, restaurant, dine-in, Thai, Chinese, Korean">
-    <meta name="theme-color" content="#ffbf7d" />
-    <meta name="author" content="Kristian Colville">
-    {% comment %} Favicon {% endcomment %}
-    <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}">
-    <link rel="icon" type="image/png" sizes="512x512" href="{% static 'img/favicon/android-chrome-512x512.png' %}">
-    <link rel="icon" type="image/png" sizes="192x192" href="{% static 'img/favicon/android-chrome-192x192.png' %}">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/favicon/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/favicon/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon/favicon-16x16.png' %}">
-    {% comment %} bootstrap css {% endcomment %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    {% comment %} custom css {% endcomment %}
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    {% block extra_css %}{% endblock %}
-    <title>FineChop</title>
-</head>
-
-<body class="d-flex flex-column min-vh-100">
-
-    <header class="container-fluid g-0 nav-container">
-        <div class="nav-wrapper fixed-top">
-            <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="{% url 'home' %}" aria-label="Click here to go to the home page"></a>
-            </nav>
-        </div>
-
-    </header>
-
-    {% block content %}
-    {% endblock %}
-
-    {% include "includes/footer.html" %}
-    <script src="https://kit.fontawesome.com/0d880835d2.js" crossorigin="anonymous"></script>
-    {% comment %} bootstrap bundle {% endcomment %}
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-    </script>
-    {% comment %} Custom js {% endcomment %}
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
-    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script src="{% static 'js/main.js' %}"></script>
-    <script src="{% static 'js/menu.js' %}"></script>
-    {% block extra_js %}{% endblock %}
-</body>
-
+    <head>
+        <meta charset="UTF-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport"
+              content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
+        <meta name="description"
+              content="FineChop - Asian-style restaurant/takeaway service in Dublin City"/>
+        <meta name="keywords"
+              content="Asian-style, food, order, menu, reservations, reserve, restaurant, dine-in, Thai, Chinese, Korean"/>
+        <meta name="theme-color" content="#ffbf7d" />
+        <meta name="author" content="Kristian Colville"/>
+        {% comment %} Favicon {% endcomment %}
+        <link rel="manifest" href="{% static 'img/favicon/site.webmanifest' %}"/>
+        <link rel="icon"
+              type="image/png"
+              sizes="512x512"
+              href="{% static 'img/favicon/android-chrome-512x512.png' %}"/>
+        <link rel="icon"
+              type="image/png"
+              sizes="192x192"
+              href="{% static 'img/favicon/android-chrome-192x192.png' %}"/>
+        <link rel="apple-touch-icon"
+              sizes="180x180"
+              href="{% static 'img/favicon/apple-touch-icon.png' %}"/>
+        <link rel="icon"
+              type="image/png"
+              sizes="32x32"
+              href="{% static 'img/favicon/favicon-32x32.png' %}"/>
+        <link rel="icon"
+              type="image/png"
+              sizes="16x16"
+              href="{% static 'img/favicon/favicon-16x16.png' %}"/>
+        {% comment %} bootstrap css {% endcomment %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+              rel="stylesheet"
+              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+              crossorigin="anonymous"/>
+        {% comment %} custom css {% endcomment %}
+        <link rel="preconnect" href="https://fonts.googleapis.com"/>
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
+              rel="stylesheet"/>
+        <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+        {% block extra_css %}{% endblock extra_css %}
+        <title>{% block head_title %}{% endblock head_title %}</title>
+    </head>
+    <body class="d-flex flex-column min-vh-100">
+        <header class="container-fluid g-0 nav-container">
+            <div class="nav-spacer"></div>
+            <div class="nav-wrapper fixed-top nav-bg">
+                <nav class="navbar navbar-expand-lg">
+                    <a class="navbar-brand"
+                       href="{% url 'home' %}"
+                       aria-label="Click here to go to the home page"></a>
+                    <div class="btn navbar-toggler"
+                         data="hamburger-menu"
+                         type="button"
+                         data-bs-toggle="collapse"
+                         data-bs-target="#navbarNavAltMarkup"
+                         aria-controls="navbarNavAltMarkup"
+                         aria-expanded="false"
+                         aria-label="Click to view drop down menu"
+                         role="navigation">
+                        <div class="center-svg">
+                            <svg class="ham hamRotate ham1"
+                                 viewBox="0 0 100 100"
+                                 onclick="this.classList.toggle('active')">
+                                <path
+                                class="line top"
+                                d="m 30,33 h 40 c 0,0 9.044436,-0.654587 9.044436,-8.508902 0,-7.854315 -8.024349,-11.958003 -14.89975,-10.85914 -6.875401,1.098863 -13.637059,4.171617 -13.637059,16.368042 v 40" />
+                                <path
+                                class="line middle"
+                                d="m 30,50 h 40" />
+                                <path
+                                class="line bottom"
+                                d="m 30,67 h 40 c 12.796276,0 15.357889,-11.717785 15.357889,-26.851538 0,-15.133752 -4.786586,-27.274118 -16.667516,-27.274118 -11.88093,0 -18.499247,6.994427 -18.435284,17.125656 l 0.252538,40" />
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <ul class="mx-sm-1 mx-auto navbar-nav">
+                            <li class="nav-link">
+                                <a>About</a>
+                            </li>
+                            <li class="nav-link">
+                                <a>Menu</a>
+                            </li>
+                            <li class="nav-link">
+                                <div class="dropdown">
+                                    <a class="dropdown-toggle"
+                                       href="#"
+                                       role="button"
+                                       id="account-dropdown"
+                                       data-toggle="dropdown"
+                                       aria-expanded="false">
+                                        Reserve
+                                    </a>
+                                    <ul class="dropdown-menu shadow mt-2" aria-labelledby="account-dropdown">
+                                        <li>
+                                            <a class="dropdown-item" href="#">Book a Table</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#">Buy Gift Card</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="nav-link bg-orange shadow">
+                                <a href="#">Order</a>
+                            </li>
+                            <li class="nav-link">
+                                <div class="dropdown">
+                                    <a class="dropdown-toggle"
+                                       href="#"
+                                       role="button"
+                                       id="account-dropdown"
+                                       data-toggle="dropdown"
+                                       aria-expanded="false">
+                                        Account
+                                    </a>
+                                    <ul class="dropdown-menu shadow mt-2" aria-labelledby="account-dropdown">
+                                        <li>
+                                            <a class="dropdown-item" href="{% url 'account_login' %}">Sign In</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="{% url 'account_signup' %}">Sign up</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                        </ul>
+                        <ul class="mx-auto navbar-nav nav-social d-sm-flex flex-row">
+                            <li class="nav-link"
+                                data-bs-toggle="tooltip"
+                                data-bs-placement="bottom"
+                                title="Facebook">
+                                <a href="#"
+                                   class="text-decoration-none"
+                                   target="_blank"
+                                   rel="noopener"
+                                   aria-label="Click here to go to our Facebook page"><i class=" fa-brands fa-facebook-f"></i></a>
+                            </li>
+                            <li class="nav-link"
+                                data-bs-toggle="tooltip"
+                                data-bs-placement="bottom"
+                                title="Instagram">
+                                <a href="#"
+                                   class="text-decoration-none"
+                                   target="_blank"
+                                   rel="noopener"
+                                   aria-label="Click here to go to our Instagram page"><i class=" fa-brands fa-instagram"></i></a>
+                            </li>
+                            <li class="nav-link"
+                                data-bs-toggle="tooltip"
+                                data-bs-placement="bottom"
+                                title="Twitter">
+                                <a href="#"
+                                   class="text-decoration-none"
+                                   target="_blank"
+                                   rel="noopener"
+                                   aria-label="Click here to go to our Twitter page"><i class="fa-brands fa-twitter"></i></a>
+                            </li>
+                            <li class="nav-link"
+                                data-bs-toggle="tooltip"
+                                data-bs-placement="bottom"
+                                title="Call Now">
+                                <a href="tel://0209126583"
+                                   class="text-decoration-none"
+                                   target="_blank"
+                                   rel="noopener"
+                                   aria-label="Click here to give us a call"><i class="fa-solid fa-phone"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        {% block content %}{% endblock content %}
+        {% include "includes/footer.html" %}
+        <script src="https://kit.fontawesome.com/0d880835d2.js" crossorigin="anonymous"></script>
+        {% comment %} bootstrap bundle {% endcomment %}
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+        </script>
+        {% comment %} Custom js {% endcomment %}
+        <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+        <script src="{% static 'js/main.js' %}"></script>
+        <script src="{% static 'js/menu.js' %}"></script>
+        {% block extra_js %}{% endblock extra_js %}
+    </body>
 </html>
