--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,6 +27,11 @@ header {
     border-top: 4px outset var(--new-york-pink);
 }
 
+.nav-spacer {
+    width: 100%;
+    height: 100px;
+}
+
 nav {
     max-width: 1600px;
     position: relative;
@@ -296,6 +301,32 @@ input.subscription~button:active {
 .copyright:hover {
     color: var(--new-york-pink);
     cursor: pointer;
+}
+
+/* -------------------------------------------------------Extras */
+
+/* ----------- Headings */
+h1 {
+    color: var(--yellow-orange-color-wheel)
+}
+
+/* ----------- Buttons */
+.btn-outline-primary {
+    color: var(--yellow-orange-color-wheel);
+    border-color: var(--matte-black);
+}
+
+.btn-outline-primary:hover,
+.btn-outline-primary:active {
+    background-color: var(--yellow-orange-color-wheel);
+    color: black;
+    transition: all 0.2s ease-in-out;
+}
+
+/* ------------ Forms */
+
+.allauth-form-inner-content label:not([for='id_remember']) {
+    display: none; /* Removes labels from allauth forms /*
 }
 
 /* -------------------------------------------------------Media Queries */
