--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,9 +27,8 @@ header {
     border-top: 4px outset var(--new-york-pink);
 }
 
-.nav-spacer {
-    width: 100%;
-    height: 100px;
+.nav-wrapper {
+    padding-top: 10px;
 }
 
 nav {
@@ -45,9 +44,9 @@ nav {
 }
 
 .navbar-brand {
-    height: 100px;
+    height: 70px;
     width: 300px;
-    background: url('/static/img/design/brand-logo.webp') no-repeat center center;
+    background: url('/static/img/design/logo-no-background.svg') no-repeat center center;
     background-size: contain;
 }
 
@@ -313,10 +312,6 @@ h1 {
 /* ------------ Forms */
 
 /* Allauth */
-
-.allauth-bg {
-    background-color: var(--mellow-apricot);
-}
 
 .allauth-container {
     color: white;
