--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -5,7 +5,7 @@
     {% trans "E-mail Addresses" %}
 {% endblock head_title %}
 {% block content %}
-<div class="container-fluid allauth-bg">
+<div class="container-fluid">
     <div class="row my-4">
         <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3">
                 <h1 class="text-center">{% trans "E-mail Addresses" %}</h1>
