--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -5,7 +5,7 @@
     {% trans "Confirm E-mail Address" %}
 {% endblock head_title %}
 {% block content %}
-<div class="container-fluid allauth-bg">
+<div class="container-fluid">
     <div class="row my-4">
         <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3">
                 <h1>{% trans "Confirm E-mail Address" %}</h1>
