--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -4,7 +4,7 @@
     {% trans "Sign Out" %}
 {% endblock head_title %}
 {% block content %}
-<div class="container-fluid allauth-bg">
+<<div class="container-fluid">
     <div class="row my-4">
         <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3">
                 <h1 class="text-center">{% trans "Sign Out" %}</h1>
@@ -18,7 +18,7 @@
                                value="{{ redirect_field_value }}"/>
                     {% endif %}
                     <div class="d-flex flex-row">
-                        <a href="{% url "/" %}" class="btn btn-outline-primary w-50 mx-1">Go Back</a>
+                        <a href="/" class="btn btn-outline-primary w-50 mx-1">Go Back</a>
                         <button class="btn btn-danger w-50 mx-1" type="submit">{% trans "Sign Out" %}</button>
                     </div>
                 </form>
