--- a/templates/account/verified_email_required.html
+++ b/templates/account/verified_email_required.html
@@ -4,9 +4,9 @@
     {% trans "Verify Your E-mail Address" %}
 {% endblock head_title %}
 {% block content %}
-<div class="container-fluid">
+<div class="container-fluid my-5">
     <div class="row my-4">
-        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3">
+        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 my-5">
                 <h1 class="text-center">{% trans "Verify Your E-mail Address" %}</h1>
                 <hr/>
                 {% url 'account_email' as email_url %}
