--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,7 +4,7 @@
 <footer class="container-fluid mt-auto py-5">
     <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 d-flex flex-column align-items-center">
-            <img src="{% static 'img/design/brand-logo.webp' %}" alt="FineChop brand logo" class="footer-logo">
+            <img src="{% static 'img/design/logo-no-background.svg' %}" alt="FineChop brand logo" class="footer-logo">
             <div class="footer-links my-4">
                 <ul class="col-12 social-links">
                     <li class="mx-1">
@@ -49,7 +49,7 @@
             </ul>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4">
-            <h4>FineChop</h4>
+            <h4>Info</h4>
             <ul class="mt-3">
                 <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
                         aria-label="Click here to discover how we built this business in the about section">About
@@ -72,13 +72,13 @@
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4">
             <p class="w-75 text-center"><i class="fa-regular fa-envelope mr-2"></i> Stay up to date on the latest from
                 <strong>FineChop</strong></p>
-            <form action="">
+            <form action="" class="allauth-form-inner-content">
                 {% csrf_token %}
                 <label for="email" hidden><a class="sr-only sr-only-focusable" href="#content">Enter your email below to
                         subscribe to our news letter</a></label>
-                <input class="subscription text-center w-75" type="email" id="email" name="email"
+                <input class="btn rounded text-center w-75" type="email" id="email" name="email"
                     placeholder="Enter your e-mail address" required>
-                <button class="btn text-white mt-2 w-75 shadow">Subscribe</button>
+                <button class="btn btn-outline-primary mt-2 w-75 shadow">Subscribe</button>
             </form>
             <p class="w-75 text-center mt-5">&copy; Created by <strong><a class="text-decoration-none copyright"
                         href="https://github.com/KristianColville1" target="_blank" rel="noopener" aria-label="Click here to view Kristian Colville GitHub
