--- a/templates/base.html
+++ b/templates/base.html
@@ -34,10 +34,9 @@
 
 <body class="d-flex flex-column min-vh-100">
     <header class="container-fluid g-0 nav-container">
-        <div class="nav-spacer"></div>
-        <div class="nav-wrapper fixed-top nav-bg">
+        <div class="nav-wrapper fixed-top">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand" href="{% url 'home' %}" aria-label="Click here to go to the home page"></a>
+                <a class="navbar-brand mx-auto" href="{% url 'home' %}" aria-label="Click here to go to the home page"></a>
                 <div class="btn navbar-toggler" data="hamburger-menu" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                     aria-label="Click to view drop down menu" role="navigation">
@@ -51,7 +50,7 @@
                         </svg>
                     </div>
                 </div>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <ul class="mx-sm-1 mx-auto navbar-nav">
                         <li class="nav-link">
                             <a>About</a>
@@ -75,7 +74,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="nav-link mx-md-3 bg-orange">
+                        <li class="nav-link">
                             <a href="#">Order</a>
                         </li>
                         <li class="nav-link">
@@ -85,17 +84,25 @@
                                     Account
                                 </a>
                                 <ul class="dropdown-menu shadow mt-2" aria-labelledby="account-dropdown">
+                                    {% if user.is_authenticated %}
+                                        <li>
+                                            <a class="dropdown-item"
+                                                href="{% url 'account_logout' %}">Sign Out</a>
+                                        </li>
+                                    {% else %}
                                     <li>
                                         <a class="dropdown-item" href="{% url 'account_login' %}">Sign In</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="{% url 'account_signup' %}">Sign up</a>
+                                        <a class="dropdown-item" href="{% url 'account_signup' %}">Sign Up</a>
                                     </li>
+                                    {% endif %}
+
                                 </ul>
                             </div>
                         </li>
                     </ul>
-                    <ul class="mx-auto navbar-nav nav-social d-sm-flex flex-row">
+                    <ul class="mx-auto navbar-nav nav-social d-sm-flex d-lg-none flex-row">
                         <li class="nav-link" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Facebook">
                             <a href="#" class="text-decoration-none" target="_blank" rel="noopener"
                                 aria-label="Click here to go to our Facebook page"><i
