--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,7 +5,7 @@
     {% trans "Signup" %}
 {% endblock head_title %}
 {% block content %}
-<div class="container-fluid my-5">
+<div class="container-fluid mt-5 min-vh-100">
     <div class="row my-4">
         <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 my-5">
                 <h1 class="text-center">{% trans "Sign Up" %}</h1>
